Fix new IDEA insepections